# SlicerCollaboration

./: CMakeLists.txt  README.md
Chat/: CMakeLists.txt  Chat.py
Chat/Resources/UI/: Chat.ui
Collaboration/: CMakeLists.txt  qSlicerCollaborationModule.cxx  qSlicerCollaborationModule.h  qSlicerCollaborationModuleWidget.cxx  qSlicerCollaborationModuleWidget.h
Collaboration/Avatars/: handPick_L.stl  handPick_R.stl  handPoint_L.stl  handPoint_R.stl
Collaboration/Logic/: CMakeLists.txt  vtkSlicerCollaborationLogic.cxx  vtkSlicerCollaborationLogic.h
Collaboration/MRML/: CMakeLists.txt  vtkMRMLCollaborationConnectorNode.cxx  vtkMRMLCollaborationConnectorNode.h  vtkMRMLCollaborationNode.cxx  vtkMRMLCollaborationNode.h
Collaboration/Resources/: qSlicerCollaborationModule.qrc
Collaboration/Resources/UI/: qSlicerCollaborationFooBarWidget.ui  qSlicerCollaborationModuleWidget.ui
Collaboration/Widgets/: CMakeLists.txt  qSlicerCollaborationFooBarWidget.cxx  qSlicerCollaborationFooBarWidget.h
